--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ board = esp32dev
 framework = arduino
 platform_packages = framework-arduinoespressif32
 monitor_speed = 115200
-
-lib_deps =
-    SPI
-    Wire
-    makerspaceleiden/MFRC522-spi-i2c-uart-async@^1.5.1
-    adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
+lib_deps = 
+	SPI
+	Wire
+	makerspaceleiden/MFRC522-spi-i2c-uart-async@^1.5.1
+	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
+	bblanchon/ArduinoJson@^7.4.1
